Refactor user login and authentication code, add change password functionality, and update user model
