# server/app.js
@@ -17,6 +17,7 @@ import getUser from './routes/getUser.js';
 import userLogin from './routes/userLogin.js';
 import handleRefreshToken from './routes/handleRefreshToken.js';
 import userLogout from './routes/userLogout.js';
+import changePassword from './routes/changePassword.js'; 
 
 // Story-related routes
 import getStoriesRouter from './routes/getStories.js';
@@ -100,6 +101,7 @@ app.use('/v1/users', updateUser);
 app.use('/v1/login', userLogin);
 app.use('/v1/refreshToken', handleRefreshToken);
 app.use('/v1/logout', userLogout); // protected
+app.use('/v1/changePassword', changePassword); // protected
 
 // TBD - when do we need to get a userId?
 app.use('/v1/users', getUser);
